{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 74,
  "lineage": "87aa3e79-2da0-8999-2cc3-97ec1c5faf3e",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:security-group/sg-05531a977a2bcd270",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-075b2f30fe4a26d26"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-075b2f30fe4a26d26"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-05531a977a2bcd270",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-075b2f30fe4a26d26"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "todo-eks-cluster-cluster-20230317120712293900000008",
            "name_prefix": "todo-eks-cluster-cluster-",
            "owner_id": "313382416572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todo-eks-cluster-cluster",
              "application": "todo-app",
              "environment": "development"
            },
            "tags_all": {
              "Name": "todo-eks-cluster-cluster",
              "application": "todo-app",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:security-group/sg-075b2f30fe4a26d26",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05531a977a2bcd270"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-075b2f30fe4a26d26",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05531a977a2bcd270"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05531a977a2bcd270"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "todo-eks-cluster-node-20230317120715177900000009",
            "name_prefix": "todo-eks-cluster-node-",
            "owner_id": "313382416572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todo-eks-cluster-node",
              "application": "todo-app",
              "environment": "development",
              "kubernetes.io/cluster/todo-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "todo-eks-cluster-node",
              "application": "todo-app",
              "environment": "development",
              "kubernetes.io/cluster/todo-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-941337742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05531a977a2bcd270",
            "security_group_rule_id": "sgr-0b1f96752eca6f652",
            "self": false,
            "source_security_group_id": "sg-075b2f30fe4a26d26",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1786167811",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05531a977a2bcd270",
            "security_group_rule_id": "sgr-011385c5e6bbe8f68",
            "self": false,
            "source_security_group_id": "sg-075b2f30fe4a26d26",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-107936242",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05531a977a2bcd270",
            "security_group_rule_id": "sgr-0b1f96752eca6f652",
            "self": false,
            "source_security_group_id": "sg-075b2f30fe4a26d26",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-835771540",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-075b2f30fe4a26d26",
            "security_group_rule_id": "sgr-0a47c0008cb8ea576",
            "self": false,
            "source_security_group_id": "sg-05531a977a2bcd270",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-217654213",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-075b2f30fe4a26d26",
            "security_group_rule_id": "sgr-060c10d283c2f7e46",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-752410917",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-075b2f30fe4a26d26",
            "security_group_rule_id": "sgr-0a147b7467d32d273",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-1380369448",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-075b2f30fe4a26d26",
            "security_group_rule_id": "sgr-055d7c80981ca9895",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-797803142",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-075b2f30fe4a26d26",
            "security_group_rule_id": "sgr-00bec605223b75d3c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1578499868",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-075b2f30fe4a26d26",
            "security_group_rule_id": "sgr-03abb5df338970439",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-903224469",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-075b2f30fe4a26d26",
            "security_group_rule_id": "sgr-0a47c0008cb8ea576",
            "self": false,
            "source_security_group_id": "sg-05531a977a2bcd270",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-609829187",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-075b2f30fe4a26d26",
            "security_group_rule_id": "sgr-0e9d0c93d6481b16c",
            "self": false,
            "source_security_group_id": "sg-05531a977a2bcd270",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-144893934",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-075b2f30fe4a26d26",
            "security_group_rule_id": "sgr-00bec605223b75d3c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1392688125",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-075b2f30fe4a26d26",
            "security_group_rule_id": "sgr-082a3737c12b8fbb9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"dev\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:security-group/sg-0e78625c9e55147ec",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0e78625c9e55147ec",
            "ingress": [],
            "name": "dev-eks-node-group-2023031712071658550000000a",
            "name_prefix": "dev-eks-node-group-",
            "owner_id": "313382416572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-eks-node-group",
              "application": "todo-app",
              "environment": "development"
            },
            "tags_all": {
              "Name": "dev-eks-node-group",
              "application": "todo-app",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cff88bafb79cf96",
            "association_id": "eipassoc-093a3deb4d3e326f4",
            "domain": "vpc",
            "id": "eipalloc-02cff88bafb79cf96",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05af984b84f778a49",
            "private_dns": "ip-10-0-6-49.ec2.internal",
            "private_ip": "10.0.6.49",
            "public_dns": "ec2-34-194-217-93.compute-1.amazonaws.com",
            "public_ip": "34.194.217.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "todo-vpc-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:internet-gateway/igw-06dd6e899b964f52c",
            "id": "igw-06dd6e899b964f52c",
            "owner_id": "313382416572",
            "tags": {
              "Name": "todo-vpc",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cff88bafb79cf96",
            "connectivity_type": "public",
            "id": "nat-03a746adc090adae6",
            "network_interface_id": "eni-05af984b84f778a49",
            "private_ip": "10.0.6.49",
            "public_ip": "34.194.217.93",
            "subnet_id": "subnet-046fa595ef48e8409",
            "tags": {
              "Name": "todo-vpc-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.todo-vpc.aws_eip.nat",
            "module.todo-vpc.aws_internet_gateway.this",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04fc8ed91bdf166561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03a746adc090adae6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04fc8ed91bdf16656",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_eip.nat",
            "module.todo-vpc.aws_internet_gateway.this",
            "module.todo-vpc.aws_nat_gateway.this",
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06dd6e899b964f52c",
            "id": "r-rtb-02f98d47280a956541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f98d47280a95654",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_internet_gateway.this",
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:route-table/rtb-04fc8ed91bdf16656",
            "id": "rtb-04fc8ed91bdf16656",
            "owner_id": "313382416572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03a746adc090adae6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todo-vpc-private",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc-private",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:route-table/rtb-02f98d47280a95654",
            "id": "rtb-02f98d47280a95654",
            "owner_id": "313382416572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06dd6e899b964f52c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todo-vpc-public",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc-public",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e8e7b164a9c8ca2",
            "route_table_id": "rtb-04fc8ed91bdf16656",
            "subnet_id": "subnet-0c89a137eaaf231f7"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.private",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024b9d497f2dc9338",
            "route_table_id": "rtb-04fc8ed91bdf16656",
            "subnet_id": "subnet-096908b7a579e5a4a"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.private",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cce8a6600f540699",
            "route_table_id": "rtb-04fc8ed91bdf16656",
            "subnet_id": "subnet-0012592f1b309d1f3"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.private",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094426a871881ccf9",
            "route_table_id": "rtb-04fc8ed91bdf16656",
            "subnet_id": "subnet-05c1c2d851c571bd1"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.private",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008d0549ece25d1df",
            "route_table_id": "rtb-04fc8ed91bdf16656",
            "subnet_id": "subnet-00b1e3a870ee8e8b0"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.private",
            "module.todo-vpc.aws_subnet.private",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035a8b507c942470e",
            "route_table_id": "rtb-02f98d47280a95654",
            "subnet_id": "subnet-046fa595ef48e8409"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c68a5ca9082f5c7d",
            "route_table_id": "rtb-02f98d47280a95654",
            "subnet_id": "subnet-07562dc490d90c968"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8c85f702fe75bcd",
            "route_table_id": "rtb-02f98d47280a95654",
            "subnet_id": "subnet-0a7f525e9a33feed0"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039d41168872c2202",
            "route_table_id": "rtb-02f98d47280a95654",
            "subnet_id": "subnet-032d14342dc36f266"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019ed1ece98658312",
            "route_table_id": "rtb-02f98d47280a95654",
            "subnet_id": "subnet-0083730d9e3a01b83"
          },
          "dependencies": [
            "module.todo-vpc.aws_route_table.public",
            "module.todo-vpc.aws_subnet.public",
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-0c89a137eaaf231f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c89a137eaaf231f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-private-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-private-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-096908b7a579e5a4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096908b7a579e5a4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-private-us-east-1b",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-private-us-east-1b",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-0012592f1b309d1f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0012592f1b309d1f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-private-us-east-1c",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-private-us-east-1c",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-05c1c2d851c571bd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c1c2d851c571bd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-private-us-east-1d",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-private-us-east-1d",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-00b1e3a870ee8e8b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b1e3a870ee8e8b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-private-us-east-1f",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-private-us-east-1f",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-046fa595ef48e8409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046fa595ef48e8409",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-public-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-public-us-east-1a",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-07562dc490d90c968",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07562dc490d90c968",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-public-us-east-1b",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-public-us-east-1b",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-0a7f525e9a33feed0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7f525e9a33feed0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-public-us-east-1c",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-public-us-east-1c",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-032d14342dc36f266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032d14342dc36f266",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-public-us-east-1d",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-public-us-east-1d",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:subnet/subnet-0083730d9e3a01b83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0083730d9e3a01b83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313382416572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "todo-vpc-public-us-east-1f",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "todo-vpc-public-us-east-1f",
              "kubernetes.io/cluster/todo-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-067443c0066ab0967"
          },
          "dependencies": [
            "module.todo-vpc.aws_vpc.this",
            "module.todo-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.todo-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313382416572:vpc/vpc-067443c0066ab0967",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061a46ad5f4f2df43",
            "default_route_table_id": "rtb-0aced37eae91ba0fe",
            "default_security_group_id": "sg-03a45308dc52633d9",
            "dhcp_options_id": "dopt-03f77882641005d1c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-067443c0066ab0967",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aced37eae91ba0fe",
            "owner_id": "313382416572",
            "tags": {
              "Name": "todo-vpc",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "todo-vpc",
              "kubernetes.io/cluster/todo-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}